Fixed scrollable issue, removing overflow-x hidden from html and separating body and html.

--- a/FrontEnd/style.css
+++ b/FrontEnd/style.css
@@ -15,11 +15,11 @@ body {
     background-color: white;
     min-height: 100vh;
     line-height: 1.5;
+    overflow-x: hidden;
 }
 
-html, body {
+html {
   overscroll-behavior: none;
-  overflow-x: hidden;
   max-width: 100%;
 }
 
